--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
           </ul>
         </div>
       </div>
+      <!-- <div class="absolute bg-white top-96 left-96 w-48 h-48 rounded-full"></div> -->
       <!-- Video Section Mobile View -->
       <div class="md:hidden flex flex-col w-full h-full absolute bottom-10 px-4">
         <div class="hidden w-full flex h-full z-[100] object-contain py-36 overflow-hidden" id="welcomeDiv">
@@ -347,7 +348,8 @@
   <!-- Form Section -->
   <section class="px-4 md:px-36 py-3 md:py-28 w-full" id="target-section">
     <div class="flex flex-col md:flex-row w-full overflow-hidden md:overflow-hidden">
-      <div class="flex flex-col md:w-3/5 bg-[#3A50B3] p-3 md:p-16 shadow-md rounded-md relative overflow-hidden">
+      <div class="flex flex-col md:w-3/5 bg-[#3A50B3] p-3 md:p-16
+       shadow-md rounded-md relative overflow-hidden">
         <div class="rounded-full w-24 h-24 md:w-28 md:h-28 bg-white absolute top-16 right-2  md:top-40 md:right-14 z-[100]"></div>
         <div class="rounded-full w-64 h-64 bg-[#77B5FF] absolute top-20 right-[-150px] md:top-40 md:right-[-100px] z-50 overflow-hidden"></div>
         <h1 class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold">
