attached Google Maps Link to Address in contact Form

--- a/index.html
+++ b/index.html
@@ -369,8 +369,11 @@
           <img src="/public/carbon_location-filled.svg" alt="" />
           <div class="flex flex-col w-full">
             <p class="text-white text-xs md:text-[16px] md:text-nowrap">
-              2030 Bristol Circle, Suite 210,<br />
-              Oakville, ON - L6H 0H2
+              <a
+                  href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
+                  >2030 Bristol Circle, Suite 210,<br />
+                  Oakville, ON - L6H 0H2</a
+                >
             </p>
           </div>
         </div>
