--- a/features.html
+++ b/features.html
@@ -822,8 +822,11 @@
             <img src="/public/carbon_location-filled.svg" alt="" />
             <div class="flex flex-col w-full">
               <p class="text-white text-xs md:text-[16px] md:text-nowrap">
-                2030 Bristol Circle, Suite 210,<br />
-                Oakville, ON - L6H 0H2
+                <a
+                  href="https://www.google.com/maps/dir//2030%20Bristol%20Circle,%20Suite%20210,%20Oakville,%20ON%20-%20L6H%200H2"
+                  >2030 Bristol Circle, Suite 210,<br />
+                  Oakville, ON - L6H 0H2</a
+                >
               </p>
             </div>
           </div>
@@ -1060,7 +1063,7 @@
       Step4.addEventListener("mouseout", function () {
         Detail4.classList.add("hidden");
         Arrow2.classList.remove("arrow-right");
-        Arrow2.classList.add("arrow-right-reverse")
+        Arrow2.classList.add("arrow-right-reverse");
         Image4.classList.add("step4-back");
         Image4.classList.remove("step4");
         Image4.classList.remove("scale-150");
