Compressed Video Files

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
       </div>
       <div class="flex w-full md:px-10 justify-center">
         <p class="text-xl league-spartan font-medium">
-          Elevate your customer experience at your fine dining establishment...
+          Elevate your customer experience at your dining establishment...
         </p>
       </div>
     </div>
