updated video tags

--- a/index.html
+++ b/index.html
@@ -140,14 +140,16 @@
           <img src="./public/yellow 3.svg" alt="" class="size-auto absolute bottom-10 right-56">
         </div>
       </div>
-      <video id="videoPlayer" src="./public/landing.mp4" class="object-cover md:h-full h-[900px]" width="100%" loop muted></video>
+      <video id="videoPlayer" class="object-cover md:h-full h-[900px]" width="100%" loop muted>
+        <source src="./public/landing.mp4" type="video/mp4" />
+      </video>
     </div>
   </section>
 
   <!-- Video and Features Section -->
 
   <section class="w-full flex flex-col overflow-hidden">
-    <div class="w-full flex flex-col md:flex-row md:px-24 md:py-16 px-4 py-6 gap-x-6 opacity-0" id="document-title">
+    <div class="w-full flex flex-col md:flex-row md:px-10 md:py-16 px-4 py-6 gap-x-6 opacity-0" id="document-title">
       <div class="w-full">
         <h1 class="text-4xl text-nowrap font-['Mitr'] font-medium gradient-text">
           Stylish single-use <br> hand wipes
@@ -224,11 +226,11 @@
   <!-- Categories Section -->
 
   <section class=" flex flex-col md:pt-[100px] bg-[#c1eaf3] h-[900px] md:h-screen relative overflow-hidden" id="colorSection">
-    <h1 class="px-4 md:px-24 text-[#3a50b3] text-[28px] md:text-[46px] font-['Mitr'] font-normal">
-      Refreshing Natural Fragnances
+    <h1 class="px-4 md:px-10 text-[#3a50b3] text-[28px] md:text-[46px] font-['Mitr'] font-normal">
+      Refreshing natural fragnances
     </h1>
     <div class="flex flex-col">
-      <div class="flex flex-wrap md:flex-nowrap md:gap-x-2 md:px-24">
+      <div class="flex flex-wrap md:flex-nowrap md:gap-x-2 md:px-10">
         <div>
           <img id="image1" class="w-auto h-[96px] md:size-36 " src="./public/green 5.svg" alt="">
           <div class="h-4 w-auto img-pods md:underline-effect rounded-full duration-500"></div>
@@ -268,7 +270,7 @@
     </div>
   </section>
   <!-- Title Content Section -->
-  <section class="px-4 md:px-24 py-3 md:py-16 opacity-0 transition-opacity duration-300" id="document-title1">
+  <section class="px-4 md:px-10 py-3 md:py-16 opacity-0 transition-opacity duration-300" id="document-title1">
     <div
       class="flex flex-col justify-center items-center w-full gap-y-10">
       <div class="flex w-full md:px-10 justify-center">
@@ -346,7 +348,7 @@
     </div>
   </section>
   <!-- Form Section -->
-  <section class="px-4 md:px-36 py-3 md:py-28 w-full" id="target-section">
+  <section class="px-4 md:px-40 py-3 md:py-28 w-full" id="target-section">
     <div class="flex flex-col md:flex-row w-full overflow-hidden md:overflow-hidden">
       <div class="flex flex-col md:w-3/5 bg-[#3A50B3] p-3 md:p-16
        shadow-md rounded-md relative overflow-hidden">
