--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <img src="./public/yellow 3.svg" alt="" class="size-auto absolute bottom-10 right-56">
         </div>
       </div>
-      <video id="videoPlayer" class="object-cover md:h-full h-[900px]" width="100%" loop muted>
+      <video id="videoPlayer" class="object-cover w-full md:h-full h-[900px]" loop muted>
         <source src="./public/landing.mp4" type="video/mp4" />
       </video>
     </div>
