--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
     </div>
 
     <div class="w-full h-[700px] my-10">
-      <video src="/public/bg-ad.mp4" class="w-full h-full object-cover" type="video/mp4" autoplay muted loop></video>
+      <video src="/public/bg-ad.mp4" class="w-full h-full object-cover" type="video/mov" autoplay muted loop></video>
     </div>
     <div class="flex w-full my-10 justify-center">
       <h1 class="px-10 py-10 text-[#acd5ef] font-['Mitr'] text-6xl text-center hover:text-[#3A50B3] font-medium">
@@ -358,7 +358,7 @@
           Get in Touch with Us!
         </h1>
         <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-bold">
-          to discuss your issues in Wicked Wipes
+          to discuss your interest in Wicked Wipes
         </h2>
         <div class="w-full py-8 md:pt-16 flex gap-x-6">
           <img src="/public/bxs_phone-call.svg" alt="" />
