Fixed The padding throughout Homepage

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
       </div>
             <!-- Video Section desktop View -->
-      <div class="hidden md:flex w-full h-full px-10 absolute overflow-hidden">
+      <div class="hidden md:flex w-full h-full px-40 absolute overflow-hidden">
         <div class="flex flex-col w-full text-white absolute bottom-0" id="topic1">
           <h1 class="text-[48px] concert-one-regular font-normal w-full" id="topic1">Hygienic, Safe, Natural,<br>
             Environmentally
@@ -149,7 +149,7 @@
   <!-- Video and Features Section -->
 
   <section class="w-full flex flex-col overflow-hidden">
-    <div class="w-full flex flex-col md:flex-row md:px-10 md:py-16 px-4 py-6 gap-x-6 opacity-0" id="document-title">
+    <div class="w-full flex flex-col md:flex-row md:px-40 md:py-16 px-4 py-6 gap-x-6 opacity-0" id="document-title">
       <div class="w-full">
         <h1 class="text-4xl text-nowrap font-['Mitr'] font-medium gradient-text">
           Stylish single-use <br> hand wipes
@@ -166,7 +166,7 @@
       </div>
     </div>
 
-    <div class="md:flex justify-around mx-4 overflow-hidden md:overflow-hidden">
+    <div class="md:flex justify-around mx-4 md:px-40 md:mx-0 overflow-hidden md:overflow-hidden">
       <div class="overflow-hidden relative w-full">
         <div id="document-sliding-cards25"
           class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
