--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <img src="./public/yellow 3.svg" alt="" class="size-auto absolute bottom-10 right-56">
         </div>
       </div>
-      <video id="videoPlayer" class="object-cover w-full md:h-full h-[900px]" loop muted>
+      <video id="videoPlayer" class="object-cover w-full md:h-full h-[900px]" loop muted playsinline>
         <source src="./public/landing.mp4" type="video/mp4" />
       </video>
     </div>
@@ -172,8 +172,8 @@
           class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
           <img src="./public/water-drop.png" alt="">
           <div>
-            <h2 class="text-bold text-2xl text-blue-600">Natural</h2>
-            <p class="league-spartan">Wicked Wipes use only about 5 ml. of cleansing fluid per pod. Washing hands
+            <h2 class="font-bold text-[28px] league-spartan text-[#3A50B3]">Natural</h2>
+            <p class="league-spartan text-[16px]">Wicked Wipes use only about 5 ml. of cleansing fluid per pod. Washing hands
               requires
               on average
               1.5 litres of water.</p>
@@ -183,8 +183,8 @@
           class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
           <img src="./public/leaf.png" alt="">
           <div>
-            <h2 class="text-bold text-2xl text-blue-600">Biodegradable</h2>
-            <p class="league-spartan">Well-made, soft, yet hardy cellulose hand wipes are designed to biodegrade
+            <h2 class="font-bold text-[28px] league-spartan text-[#3A50B3]">Biodegradable</h2>
+            <p class="league-spartan text-[16px]">Well-made, soft, yet hardy cellulose hand wipes are designed to biodegrade
               naturally</p>
           </div>
         </div>
@@ -192,15 +192,15 @@
           class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
           <img src="./public/recycle.png" alt="">
           <div>
-            <h2 class="text-bold text-2xl text-blue-600">Recyclable</h2>
-            <p class="league-spartan">The pod is made from high quality PP / 05 raw material which is 100% recyclable.
+            <h2 class="font-bold text-[28px] league-spartan text-[#3A50B3]">Recyclable</h2>
+            <p class="league-spartan text-[16px]">The pod is made from high quality PP / 05 raw material which is 100% recyclable.
             </p>
           </div>
         </div>
       </div>
-      <div id="document-ani-video-card" class=" md:opacity-0 md:overflow-hidden">
-        <div class="relative w-full max-w-xl overflow-hidden shadow-xl rounded-3xl z-100">
-          <video src="./public/animation-video.mp4" class="transform transition-transform scale-125 overflow-hidden md:overflow-hidden"
+      <div id="document-ani-video-card" class="h-full md:opacity-0">
+        <div class="relative w-full h-full overflow-hidden shadow-2xl rounded-3xl z-100">
+          <video src="./public/animation-video.mp4" class="transform transition-transform scale-125 w-full h-full" width="100%" height="100%"
             type="video/mp4" autoplay muted loop></video>
         </div>
         <div class="flex flex-col justify-center items-center">
@@ -227,7 +227,7 @@
 
   <section class=" flex flex-col md:pt-[100px] bg-[#c1eaf3] h-[903px] md:h-[903px] relative overflow-hidden" id="colorSection">
     <h1 class="px-4 md:px-40 text-[#3a50b3] text-[28px] md:text-[46px] font-['Mitr'] font-normal">
-      Refreshing natural fragnances
+      Refreshing natural fragrances
     </h1>
     <div class="flex flex-col">
       <div class="flex flex-wrap md:flex-nowrap md:gap-x-2 md:px-40">
@@ -330,7 +330,7 @@
           <h1 class="text-4xl md:text-[72px] text-gradient md:leading-none font-normal">Make It Yours </h1>
           <p class="text-[20px] font-['League Spartan'] font-normal text-[#3A50B3] word-wrap">Wicked
             Wipes is an original advertising opportunity for businesses and a successful marketing tool that will
-            surprise and delight your customers. Easily add your brand to customize the pod</p>
+            surprise and delight your customers. Add your brand to customize the pod</p>
         </div>
         <div class="">
           <img class="h-[337px] w-[938px] relative overflow-hidden" src="./public/whitelogo.svg" alt="logo">
