Videos Working on IOS devices

--- a/features.html
+++ b/features.html
@@ -212,6 +212,7 @@
           class="object-cover h-[800px] md:h-full"
           src="./public/bg-video.mp4"
           width="100%"
+          playsinline
           autoplay
           loop
           muted
