--- a/private-label.html
+++ b/private-label.html
@@ -150,6 +150,7 @@
           loop
           muted
           type="video/mp4"
+          playsinline
         ></video>
       </div>
     </section>
