--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       </div>
       <div id="document-ani-video-card" class="h-full md:opacity-0">
         <div class="relative w-full h-full overflow-hidden shadow-2xl rounded-3xl z-100">
-          <video src="./public/animation-video.mp4" class="transform transition-transform scale-125 w-full h-full" width="100%" height="100%"
+          <video src="./public/animation-video.mp4" class="transform transition-transform scale-125 w-full h-full" playsinline width="100%" height="100%"
             type="video/mp4" autoplay muted loop></video>
         </div>
         <div class="flex flex-col justify-center items-center">
@@ -213,7 +213,7 @@
     </div>
 
     <div class="w-full h-[700px] my-10">
-      <video src="/public/bg-ad.mp4" class="w-full h-full object-cover" type="video/mov" autoplay muted loop></video>
+      <video src="/public/bg-ad.mp4" class="w-full h-full object-cover" type="video/mov" autoplay muted loop playsinline></video>
     </div>
     <div class="flex w-full my-10 justify-center">
       <h1 class="px-10 py-10 text-[#acd5ef] font-['Mitr'] text-6xl text-center hover:text-[#3A50B3] font-medium">
