--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
           </div>
         </div>
       </div>
-      <div id="document-ani-video-card" class="h-full md:opacity-0">
+      <div id="document-ani-video-card" class="h-full md:opacity-0 flex flex-col justify-center items-center">
         <div class="relative w-full h-full overflow-hidden shadow-2xl rounded-3xl z-100">
           <video src="./public/animation-video.mp4" class="transform transition-transform scale-125 w-full h-full" playsinline width="100%" height="100%"
             type="video/mp4" autoplay muted loop></video>
@@ -317,7 +317,7 @@
         </div>
       </div>
     </div>
-    <div class="bg-white relative bottom-20 md:h-36 h-28 w-full z-[100] rounded-[25%] md:rounded-[40%]"></div>
+    <div class="bg-white relative bottom-32 md:h-32 h-28 w-full z-[100] rounded-tl-[50%] rounded-tr-[50%]"></div>
   </section>
 
   <!-- Make it your Brand Section -->
