--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         </div>
       </div>
       <div class="flex flex-col w-full shadow-md rounded-md p-10">
-        <form action="" class="w-full flex flex-col gap-y-6" id="contactForm">
+        <form action="" class="w-full flex flex-col gap-y-6" id="contactForm" action="./inc/mailer.php" method="post" novalidate>
           <div class="flex justify-between w-full gap-x-6">
             <input type="text" id="fname" placeholder="First Name" name="fname" class="form" required minlength="2" />
             <input type="text" id="lname" placeholder="Last Name" name="lname" class="form" required minlength="2" />
@@ -539,6 +539,33 @@
       alert('Form submitted successfully!');
     }
   }
+  
+</script>
+<script>
+  $(document).ready(function () {
+      $('#contactForm').on('submit', function (e) {
+          e.preventDefault(); //Prevents default submit
+          var form = $(this);
+          var post_url = form.attr('action');
+          var post_data = form.serialize(); //Serialized the form data
+          $.ajax({
+              type: 'POST',
+              url: './inc/mailer.php', // Your form script
+              data: post_data,
+              success: function (msg) {
+                  $('#contactForm')[0].reset(); // to reset form data
+                  //alert('Success');
+              },
+              error: function(){
+                  alert("Error sending e-mail");
+              }
+          }).done(function (msg) {
+              setTimeout(function () {
+                  alert("Form submitted successfully! We'll get back to you soon. Thank you.");
+              }, 2000);
+          });
+      });
+  });
 </script>
   <script>
     const documentSection = document.getElementById("document-section");
