--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <style>
     .form {
       width: 100%;
@@ -539,7 +540,6 @@
       alert('Form submitted successfully!');
     }
   }
-  
 </script>
 <script>
   $(document).ready(function () {
