--- a/features.html
+++ b/features.html
@@ -833,65 +833,20 @@
           </div>
         </div>
         <div class="flex flex-col w-full shadow-md rounded-md p-10">
-          <form action="" class="w-full flex flex-col gap-y-6">
+          <form action="" class="w-full flex flex-col gap-y-6" id="contactForm" action="./inc/mailer.php" method="post" novalidate>
             <div class="flex justify-between w-full gap-x-6">
-              <input
-                type="text"
-                label="First Name"
-                id="fname"
-                placeholder="First Name"
-                name="fname"
-                class="form"
-              />
-              <input
-                type="text"
-                label="Last Name"
-                id="lname"
-                placeholder="Last Name"
-                name="fname"
-                class="form"
-              />
+              <input type="text" id="fname" placeholder="First Name" name="fname" class="form" required minlength="2" />
+              <input type="text" id="lname" placeholder="Last Name" name="lname" class="form" required minlength="2" />
             </div>
             <div class="flex justify-between w-full gap-x-6">
-              <input
-                type="email"
-                label="Business Email"
-                id="bemail"
-                placeholder="Business Email"
-                name="fname"
-                class="form"
-              />
-              <input
-                type="tel"
-                label="Phone Number"
-                id="pnum"
-                placeholder="Phone Number"
-                name="fname"
-                class="form"
-              />
+              <input type="email" id="bemail" placeholder="Business Email" name="bemail" class="form" required />
+              <input type="tel" id="pnum" placeholder="Phone Number" name="pnum" class="form" required pattern="^[0-9]{10}$" />
             </div>
-
-            <input
-              type="text"
-              label="Company Name"
-              id="company"
-              placeholder="Company Name"
-              name="cname"
-              class="form"
-            />
-            <input
-              type="tel"
-              label="Message"
-              id="message"
-              placeholder="Message"
-              name="msg"
-              class="form"
-            />
+            <input type="text" id="company" placeholder="Company Name" name="cname" class="form" required minlength="2" />
+            <textarea id="message" placeholder="Message" name="msg" class="form" required minlength="10"></textarea>
           </form>
           <div class="w-full flex justify-end">
-            <button
-              class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4"
-            >
+            <button class="flex justify-center w-1/2 text-white text-base font-medium bg-[#3A50B3] hover:bg-blue-700 rounded-md mt-28 py-4" onclick="validateForm()">
               Let's Connect
             </button>
           </div>
@@ -939,6 +894,42 @@
       </div>
     </section>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      function validateForm() {
+        const form = document.getElementById('contactForm');
+        if (!form.checkValidity()) {
+          form.reportValidity();
+        } else {
+          alert('Form submitted successfully!');
+        }
+      }
+    </script>
+    <script>
+      $(document).ready(function () {
+          $('#contactForm').on('submit', function (e) {
+              e.preventDefault(); //Prevents default submit
+              var form = $(this);
+              var post_url = form.attr('action');
+              var post_data = form.serialize(); //Serialized the form data
+              $.ajax({
+                  type: 'POST',
+                  url: './inc/mailer.php', // Your form script
+                  data: post_data,
+                  success: function (msg) {
+                      $('#contactForm')[0].reset(); // to reset form data
+                      //alert('Success');
+                  },
+                  error: function(){
+                      alert("Error sending e-mail");
+                  }
+              }).done(function (msg) {
+                  setTimeout(function () {
+                      alert("Form submitted successfully! We'll get back to you soon. Thank you.");
+                  }, 2000);
+              });
+          });
+      });
+    </script>
     <script>
       AOS.init();
     </script>
