Updated Contact form text

--- a/private-label.html
+++ b/private-label.html
@@ -353,7 +353,7 @@
           <h2
             class="text-white [text-8px] md:text-[16px] urbanist-regular font-bold"
           >
-            to discuss your issues in Wicked Wipes
+          to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
             <img src="/public/bxs_phone-call.svg" alt="" />
