--- a/testimonials.html
+++ b/testimonials.html
@@ -241,7 +241,7 @@
             Get in Touch with Us!
           </h1>
           <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-bold">
-            to discuss your issues in Wicked Wipes
+            to discuss your interest in Wicked Wipes
           </h2>
           <div class="w-full py-8 md:pt-16 flex gap-x-6">
             <img src="/public/bxs_phone-call.svg" alt="" />
@@ -312,8 +312,8 @@
           </nav>
         </div>
         <div class="flex md:flex-col gap-4 md:gap-2 py-4 md:py-0">
-          <h1 class="text-white font-['League Spartan'] font-bold text-base">
-            Follow Us
+          <h1 class="text-white league-spartan font-bold text-base">
+            Follow us
           </h1>
           <div class="flex gap-3 items-center">
             <img src="./public/Fb.svg" class="size-7" alt="fb" />
