--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
       </div>
     </div>
 
-    <div class="md:flex md:justify-evenly justify-around mx-4 md:px-40 md:mx-0 overflow-hidden md:overflow-hidden">
-      <div class="relative w-full">
+    <div class="md:flex md:justify-evenly justify-around items-start mx-4 md:px-40 md:mx-0 md:gap-x-6 overflow-hidden md:overflow-hidden h-full">
+      <div class="relative  h-full">
         <div id="document-sliding-cards25"
-          class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
+          class="flex gap-4 justify-center items-start p-6 shadow-2xl rounded-3xl font-['Baloo'] md:w-[500px] my-8">
           <img src="./public/water-drop.png" alt="">
           <div>
             <h2 class="font-bold text-[28px] league-spartan text-[#3A50B3]">Natural</h2>
@@ -199,7 +199,7 @@
           </div>
         </div>
         <div id="document-sliding-cards75"
-          class="flex gap-4 justify-center items-start p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
+          class="flex h-full gap-4 justify-center items-center p-6 shadow-xl rounded-3xl font-['Baloo'] md:w-[500px] md:opacity-0 my-8">
           <img src="./public/recycle.png" alt="">
           <div>
             <h2 class="font-bold text-[28px] league-spartan text-[#3A50B3]">Recyclable</h2>
@@ -208,13 +208,13 @@
           </div>
         </div>
       </div>
-      <div id="document-ani-video-card" class="w-full h-full md:opacity-0 flex flex-col justify-center items-center">
-        <div class="relative w-full h-full overflow-hidden shadow-2xl rounded-3xl z-100">
-          <video src="./public/animation-video.mp4" class="transform transition-transform scale-125 w-full h-full" playsinline width="100%" height="100%"
+      <div id="document-ani-video-card" class="w-auto h-full md:opacity-0 flex flex-col justify-center items-center mt-12">
+        <div class="relative w-full h-[380px] overflow-hidden shadow-2xl rounded-3xl z-100">
+          <video src="./public/animation-video.mp4" class="transform transition-transform scale-125 w-full h-full" playsinline
             type="video/mp4" autoplay muted loop></video>
         </div>
         <div class="flex flex-col justify-center items-center">
-          <button class="font-['Baloo'] px-10 text-white text-lg font-medium bg-[#3A50B3] rounded-full mt-6 py-4">
+          <button class="font-['Baloo'] px-10 text-white text-lg font-medium bg-[#3A50B3] rounded-full mt-6 py-2">
             LEARN MORE
           </button>
           <p class="text-lg md:text-[28px] league-spartan text-[#7DB1E7] font-bold mt-2">About Wicked Wipes</p>
@@ -425,7 +425,7 @@
         </nav>
       </div>
       <div class="flex md:flex-col gap-2">
-        <h1 class="text-white font-['League Spartan'] font-bold text-base">Follow Us</h1>
+        <h1 class="text-white league-spartan font-bold text-base">Follow us</h1>
         <div class="flex gap-3 items-center">
           <img src="./public/Fb.svg" class="size-7" alt="fb">
           <img src="./public/Instagram.svg" class="size-7" alt="fb">
