Updated the font sizes

--- a/features.html
+++ b/features.html
@@ -804,7 +804,7 @@
             Get in Touch with Us!
           </h1>
           <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular font-bold"
+            class="text-white [text-8px] md:text-[16px] urbanist-regular"
           >
           to discuss your interest in Wicked Wipes
           </h2>
