--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
         <h1 class="text-white text-[14px] md:text-[28px] urbanist-regular font-bold">
           Get in Touch with Us!
         </h1>
-        <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular font-bold">
+        <h2 class="text-white [text-8px] md:text-[16px] urbanist-regular">
           to discuss your interest in Wicked Wipes
         </h2>
         <div class="w-full py-8 md:pt-16 flex gap-x-6">
