--- a/private-label.html
+++ b/private-label.html
@@ -70,7 +70,7 @@
         <nav class="hidden md:flex items-center justify-center rounded-full">
           <ul
             id="menu"
-            class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 md:px-16 md:gap-x-8 text-[#3A50B3] text-lg md:text-2xl font-normal font-['Baloo']"
+            class="flex flex-col md:flex-row justify-center items-center text-center gap-y-4 md:gap-y-0 md:px-16 md:gap-x-8 text-[#3A50B3] text-lg md:text-xl font-normal font-['Baloo']"
           >
             <li><a href="features.html">Features</a></li>
             <li><a href="private-label.html">Private Label</a></li>
@@ -351,7 +351,7 @@
             Get in Touch with Us!
           </h1>
           <h2
-            class="text-white [text-8px] md:text-[16px] urbanist-regular font-bold"
+            class="text-white [text-8px] md:text-[16px] urbanist-regular"
           >
           to discuss your interest in Wicked Wipes
           </h2>
